--- a/PageObjectModelProject/pom.xml
+++ b/PageObjectModelProject/pom.xml
@@ -23,7 +23,7 @@
     </dependency> 
     
     
-    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+    <!-- https://mvnrepository.com/artifact/org.testng/testng test -->
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
